fixed interior quicklinks overlap
added padding to quicklinks div and removed it from the ul list to avoid extra padding

--- a/UniversityCollege_cssCleanup/skin.css
+++ b/UniversityCollege_cssCleanup/skin.css
@@ -905,10 +905,10 @@ span.JobsLink a {
 #quicklinks-int {
   margin: 25px 0 10px;
   background: url("img/quick-links.png") 0 0 no-repeat;
+  padding-top:25px;
 }
 #quicklinks-int ul {
   margin: 0;
-  padding: 25px 0;
   list-style: none;
 }
 #quicklinks-int.first {
